# fileserver

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
client/: CMakeLists.txt  Dockerfile
client/include/: c_authentication_protocol.h  c_byte_stream.h  c_dh.h  c_file_transfer_client.h  c_file_transfer_protocol.h  c_interactive_client.h  c_simple_crypto.h
client/src/: c_authentication_protocol.cpp  c_byte_stream.cpp  c_dh.cpp  c_file_transfer_client.cpp  c_file_transfer_protocol.cpp  c_interactive_client.cpp  c_internet_traffic_protocol.cpp  c_kex.cpp  c_packet.cpp  c_simple_crypto.cpp  c_ssh_socket.cpp
client/uploads/: Dog.txt
server/: CMakeLists.txt  Dockerfile  s_main.cpp
server/include/: dh.h  file_transfer_server.h  kex_init.h  s_authentication_protocol.h  s_dh.h  s_file_transfer_protocol.h  s_file_transfer_server.h  s_internet_traffic_protocol.h  s_kex.h  s_packet.h
server/src/: byte_stream.cpp  dh.cpp  file_transfer_server.cpp  kex.cpp  kex_init.cpp  packet.cpp  s_authentication_protocol.cpp  s_byte_stream.cpp  s_dh.cpp  s_file_transfer_protocol.cpp  s_file_transfer_server.cpp  s_internet_traffic_protocol.cpp  s_kex.cpp  s_packet.cpp  s_simple_crypto.cpp
server/uploads/: hosung_bee.txt  hosung_c_main.cpp  hosung_entrypoint.sh
src/: main.cpp  ssh_socket.cpp  ssh_socket.h
ssh-client/: CMakeLists.txt  Dockerfile  main.cpp
ssh-client/include/: byte_stream.h  dh_kex.h  kex_init.h  packet.h  ssh_socket.h
ssh-client/src/: byte_stream.cpp  dh_kex.cpp  kex_init.cpp  packet.cpp  ssh_socket.cpp
